# keysynth

./: .gitignore  BRIEF_seqview.md  CHANGELOG.md  Cargo.toml  JUKEBOX_LIVE_MIGRATION.md  JUKEBOX_REBUILD.md  README.md  Trunk.toml
.cargo/: config.toml
.dispatch/: cp-design.md  design.md  kira-codex-brief.md  kira-gemini-brief.md  t1.4-soundboard-brief.md  voice-unify-brief.md
.github/workflows/: ci.yml  deploy-pages.yml  song-collector.yml
ab-test/: analyse.py  compare_bus.py
bench-out/: library.db  library.db.sql
bench-out/PATTERNS/: demo_breakbeat.json  demo_four_on_the_floor.json
bench-out/REF/: README.md
bench-out/REF/guitar/: LICENSE-GuitarSet.txt  LICENSE-Mutopia.txt  LICENSE-Slakh2100.txt  LICENSE.txt  README.md  fetch.sh
bench-out/REF/guitar/chord/: C_major_strum.mid  manifest.json
bench-out/REF/guitar/corpus/classical/: manifest.json
bench-out/REF/guitar/corpus/popular/: manifest.json
bench-out/REF/guitar/single_note/: manifest.json
bench-out/REF/sfz_salamander_multi/: README.md  modal_lut.json
bench-out/gui-verify/: jukebox-pixel-vlm-1777450429.audit.json  jukebox-pixel-vlm-1777450429.crit.json  jukebox-redesign-1777463123.audit.json  jukebox-redesign-1777463123.crit.json
bench-out/songs/: README.md  manifest.json
cp-core/: Cargo.toml  README.md
cp-core/src/: lib.rs
docs/: wasm-sqlite-feasibility.md
examples/: measure_peaks.rs
notes/: 2026-04-26_hotswap.md
reference/: README.md  expected_hashes.txt
reference/stk-1.x/: README.md
samples/: manifest.json
scripts/: gui_vlm_critique.sh  run-collector.sh  verify_jukebox.sh
src/: analysis.rs  audio_kira.rs  calibration.rs  chiptune_import.rs  cp.rs  drums.rs  dsp.rs  gm.rs  gui_cp.rs  jukebox_core.rs  lib.rs  live_abi.rs  live_reload.rs  main.rs  midi_sched.rs  preview_cache.rs  resample.rs  reverb.rs  score.rs  sequencer.rs  sfz.rs  soundboard.rs  sympathetic.rs  synth.rs  ui.rs  voice_lib.rs  voice_pool.rs
src/ab_test/: mod.rs
src/audio_audit/: mod.rs
src/extract/: attack.rs  decompose.rs  inharmonicity.rs  mod.rs  t60.rs
src/library_db/: mod.rs
src/play_log/: mod.rs
src/scripting/: bindings.rs  mod.rs
src/song/: mod.rs
src/voice_collector/: mod.rs
src/voices/: bridge_admittance.rs  fm.rs  guitar.rs  guitar_stk.rs  hammer_stulov.rs  koto.rs  ks.rs  ks_rich.rs  longitudinal.rs  mistuning_table.rs  mod.rs  piano.rs  piano_5am.rs  piano_modal.rs  placeholder.rs  square.rs  string_inharmonicity.rs  sub.rs
tests/: cp_e2e_demo.sh  cp_gui_integration_e2e.sh  cp_gui_voice_lib.rs  cp_smoke.rs  extract_attack.rs  extract_decompose.rs  extract_inharmonicity.rs  extract_t60.rs  guitar_corpus_e2e.sh  guitar_e2e.rs  guitar_stk_e2e.rs  jukebox_lazy_cache_e2e.rs  ks_two_stage_dispersion.rs  kssong_e2e.rs  library_db_e2e.rs  live_reload_smoke.rs  piano_bridge_admittance_e2e.rs  piano_mistuning_e2e.rs  piano_pedal_e2e.rs  score_basic.rs  scripting_phase1_e2e.sh  scripting_smoke.rs  voice_browser_discovery_e2e.rs  voice_decay_model_e2e.rs  voice_factory_equivalence.rs  voice_output_level.rs  voice_unify_e2e.sh  web_audio_bus_regression.rs
tools/: .append_genre_entries.py  build_residual_ir.py  collector_validate.py  compare_wavs.py  fetch-guitar-refs.sh  imslp_collector.py  mutopia_collector.py  wikifonia_collector.py
voices_live/: Cargo.toml
voices_live/guitar/: Cargo.toml
voices_live/guitar/src/: lib.rs
voices_live/guitar_stk/: Cargo.toml
voices_live/guitar_stk/src/: lib.rs
voices_live/piano/: Cargo.toml
voices_live/piano/src/: lib.rs
voices_live/piano_5am/: Cargo.toml
voices_live/piano_5am/src/: lib.rs
voices_live/piano_lite/: Cargo.toml
voices_live/piano_lite/src/: lib.rs
voices_live/piano_modal/: Cargo.toml
voices_live/piano_modal/src/: lib.rs
voices_live/piano_thick/: Cargo.toml
voices_live/piano_thick/src/: lib.rs
voices_live/src/: lib.rs
web/: index.html
web/fonts/: README.md
