[workspace]
# Workspace introduced for the `cp-core` substrate split (PR #41).
# `voices_live/` stays out of the workspace so it can rebuild
# independently as a hot-reloaded cdylib without dragging in the rest
# of the build graph.
members = ["cp-core"]
exclude = ["voices_live"]

[package]
name = "keysynth"
version = "0.1.0"
edition = "2021"
description = "Real-time MIDI keyboard -> speaker synth (square / Karplus-Strong)."

[features]
# Default = full native build (live MIDI in, native audio out, SF2/SFZ playback,
# offline analysis bins). Disable default features and pass `--features web` to
# get the trimmed wasm32 build for the GitHub Pages demo.
default = ["native"]

native = [
    "dep:midir",
    "dep:ctrlc",
    "dep:rustysynth",
    "dep:hound",
    "dep:rustfft",
    "dep:image",
    "dep:rfd",
    "dep:symphonia",
    "dep:midly",
    "dep:game-music-emu",
    "dep:rodio",
    # Voice hot-reload: libloading drives the dynamic-DLL swap, notify
    # watches `voices_live/src/` for source edits, arc-swap gives the
    # MIDI thread a wait-free read of the current factory. Native-only
    # because the wasm32 build can't load .so/.dll/.dylib at runtime.
    "dep:libloading",
    "dep:notify",
    "dep:arc-swap",
    # Voice Control Protocol (CP): keysynth is the first consumer of
    # the workspace-local `cp-core` JSON-RPC 2.0 substrate. ksctl CLI
    # client lives in this crate too. cp-core itself has zero
    # third-party RPC dependencies (std + serde + serde_json only)
    # — see `cp-core/README.md` for the substrate philosophy.
    "dep:cp-core",
    # toml: parses `[package.metadata.keysynth-voice]` blocks out of
    # `voices_live/<name>/Cargo.toml` so new voice plugins show up in
    # the GUI side panel by simply landing a directory + metadata —
    # no edits to `voice_lib.rs` / `ui.rs` / Engine enum required.
    # Native-only: discovery is filesystem-scoped and never runs in
    # the wasm browser build.
    "dep:toml",
    # sha2: SHA-256 for the preview-cache key hash (issue #62 Phase 2).
    # Native-only because the cache renders to disk via subprocess
    # invocation of render_midi.
    "dep:sha2",
    # rusqlite: bundled SQLite for the materialized songs/voices catalog
    # (issue #66, src/library_db). `bundled` links the SQLite C amalgamation
    # into the binary — no system libsqlite3 dependency, no cross-platform
    # version skew at ship time. Native-only because the catalog is
    # filesystem-scoped and the wasm bundle has no `bench-out/library.db`.
    "dep:rusqlite",
    # steel-core: embedded Scheme interpreter for the scripting layer
    # (issue #56 Phase 1). Hosts the Steel REPL (`ksrepl` binary) and is
    # the foundation for Phase 2/3 — Rust API exposure as Steel callables
    # and a Lisp DSL for chord progressions / live edit. Native-only:
    # the wasm browser build keeps to plain Rust UI for now.
    "dep:steel-core",
]

# Web build: stripped to the modelling engines + on-screen keyboard. Pulls
# in rustysynth so the SF2 (sf-piano) engine works on Pages too — the SF2
# bytes are baked into the wasm via `include_bytes!`. Drops midir / hound /
# rustfft / image / sfz (sample library) which are either native-only
# crates (midir audio backends) or only used by offline analysis tools.
web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "dep:js-sys",
    "dep:rustysynth",
    "cpal/wasm-bindgen",
]

[dependencies]
# DSP / GUI core — shared between native and web builds.
cpal = "0.15"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native-only (gated via `native` feature).
midir = { version = "0.10", optional = true }
ctrlc = { version = "3.4", optional = true }
rustysynth = { version = "1.3", optional = true }
hound = { version = "3.5", optional = true }
rustfft = { version = "6", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
# rfd: native file-picker dialogs (Load SFZ.../Load SF2... in src/ui.rs).
rfd = { version = "0.14", optional = true }
# symphonia: pure-Rust MP3 decoding for the jukebox/A/B harnesses.
symphonia = { version = "0.5", default-features = false, features = ["mp3"], optional = true }
# midly: SMF parsing for render_midi.
midly = { version = "0.5", optional = true }
# game-music-emu: NSF/etc. ground-truth renderer for render_nsf.
# NSF-only feature set + skip vgm/gym which break under MSVC -W4.
game-music-emu = { version = "0.3", default-features = false, features = ["nsf", "nsfe", "ay", "gbs", "hes", "kss", "sap", "spc"], optional = true }
# rodio: WAV playback for the step-sequencer (seq_grid bin).
rodio = { version = "0.19", optional = true }
# libloading: cross-platform .dll/.so/.dylib loader for the voice
# hot-reload subsystem. Used by `src/live_reload.rs`. Optional and
# native-only so the wasm32 build doesn't see it.
libloading = { version = "0.8", optional = true }
# notify: filesystem watcher for `voices_live/src/`. Triggers cargo
# rebuild + DLL reload on save. Native-only.
notify = { version = "6", optional = true }
# arc-swap: wait-free atomic Arc swap for handing the latest live
# factory from the watcher thread to the MIDI callback. Native-only.
arc-swap = { version = "1.7", optional = true }
# cp-core: workspace-local JSON-RPC 2.0 substrate over TCP localhost.
# Built deliberately vendor-neutral — no jsonrpsee / rmcp / tonic /
# other third-party RPC SDKs — so it can be reused across the rest
# of the studio (ghostty-win, photo-ai-lisp, etc.) without taking on
# someone else's protocol opinions.
cp-core = { path = "cp-core", optional = true }
# toml: read `[package.metadata.keysynth-voice]` from voice plugin
# manifests for GUI-side discovery (see `voice_lib::discover_plugin_voices`).
# Default features are fine — we only need top-level `toml::from_str`.
toml = { version = "0.8", optional = true }
# sha2: SHA-256 for `preview_cache` cache-key hashing (issue #62 Phase 2).
# Stable, no-std-friendly, default features only. Native-only because the
# preview_cache module itself is gated to `native` (depends on hound +
# subprocess invocation of render_midi).
sha2 = { version = "0.10", optional = true }
# rusqlite: bundled SQLite for the materialized library catalog
# (`src/library_db`, issue #66). `bundled` links the amalgamation
# directly so we don't depend on a system libsqlite3 — keysynth ships
# without per-OS install steps. Native-only: the wasm bundle has no
# `bench-out/library.db` to read.
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
# steel-core: embedded Scheme interpreter — host for the Lisp scripting
# layer roadmap (issue #56). Phase 1 just lights up the runtime + REPL;
# Phase 2/3 will register keysynth Rust API as Steel callables. Default
# features (`std`, `modules`) are fine — they enable the standard prelude
# and module system. Native-only: see the `native` feature comment above.
steel-core = { version = "0.8", optional = true }

# Web-only (gated via `web` feature). Pulled in only when targeting wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "Navigator",
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "Blob",
    "BlobPropertyBag",
    "MessageEvent",
    "MessagePort",
    "Url",
    "Response",
    "MidiAccess",
    "MidiConnectionEvent",
    "MidiInput",
    "MidiInputMap",
    "MidiMessageEvent",
    "MidiOptions",
    "MidiPort",
    "MidiPortConnectionState",
    "MidiPortDeviceState",
    "MidiPortType",
] }

[profile.release]
opt-level = 3
lto = "thin"

# Smaller wasm bundle: tighter inlining + size-aware codegen. opt-level = "s"
# (size) keeps DSP hot loops vectorised in practice but trims dead code more
# aggressively than "3". LTO already on from the shared profile.release above.
[profile.release.package."*"]
opt-level = 3

# ---------------------------------------------------------------------------
# Binaries.
#
# `keysynth` is the live native synth.
# `keysynth-web` is the wasm32 entry point built by trunk.
# Everything else is an offline harness (bench / analyse / extract dump /
# render / score / build_modal_lut). All offline tools require the `native`
# feature so `cargo build --no-default-features --features web --target
# wasm32-unknown-unknown` only sees `keysynth-web`.
# ---------------------------------------------------------------------------

[[bin]]
name = "keysynth"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "keysynth-web"
path = "src/bin/web.rs"
required-features = ["web"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
required-features = ["native"]

[[bin]]
name = "analyse"
path = "src/bin/analyse.rs"
required-features = ["native"]

[[bin]]
name = "cpubench"
path = "src/bin/cpubench.rs"
required-features = ["native"]

[[bin]]
name = "extract_dump"
path = "src/bin/extract_dump.rs"
required-features = ["native"]

[[bin]]
name = "extract_mistuning"
path = "src/bin/extract_mistuning.rs"
required-features = ["native"]

[[bin]]
name = "render_modal"
path = "src/bin/render_modal.rs"
required-features = ["native"]

[[bin]]
name = "score"
path = "src/bin/score.rs"
required-features = ["native"]

[[bin]]
name = "build_modal_lut"
path = "src/bin/build_modal_lut.rs"
required-features = ["native"]

[[bin]]
name = "render_chord"
path = "src/bin/render_chord.rs"
required-features = ["native"]

[[bin]]
name = "render_song"
path = "src/bin/render_song.rs"
required-features = ["native"]

# render_midi binary: parse a Standard MIDI File (.mid) and render it
# through any keysynth engine.
[[bin]]
name = "render_midi"
path = "src/bin/render_midi.rs"
required-features = ["native"]

[[bin]]
name = "kssong"
path = "src/bin/kssong.rs"
required-features = ["native"]

# render_chiptune binary: parse a chiptune-lab song JSON and render it.
[[bin]]
name = "render_chiptune"
path = "src/bin/render_chiptune.rs"
required-features = ["native"]

# NOTE (2026-04-30 凍結): jukebox / jukebox_lite / jukebox_lite_c /
# jukebox_lite_g の4変種は archive/jukebox-bins-2026-04-30 タグに退避。
# 今後の jukebox 機能は jukebox_lite_seq (sequencer + list view 統合) に集約。

# seq_grid binary: standalone egui step-sequencer pattern grid.
[[bin]]
name = "seq_grid"
path = "src/bin/seq_grid.rs"
required-features = ["native"]

# render_nsf binary: NSF (Nintendo Sound Format) ground-truth renderer.
[[bin]]
name = "render_nsf"
path = "src/bin/render_nsf.rs"
required-features = ["native"]

# ksctl: Control Protocol CLI client. Connects to the keysynth GUI's
# CP server (started with `--cp`) over a named pipe (Windows) or
# Unix-socket (Linux/macOS) and drives slot load/swap/render commands.
# Native-only: wasm32 has no pipe/socket access, and ksctl is a separate
# CLI process anyway.
[[bin]]
name = "ksctl"
path = "src/bin/ksctl.rs"
required-features = ["native"]

# keysynth_db: maintenance CLI for the materialized library catalog
# (issue #66). Wraps `LibraryDb::rebuild` / `migrate` / typed queries
# so an operator can inspect or refresh `bench-out/library.db` without
# launching the GUI.
[[bin]]
name = "keysynth_db"
path = "src/bin/keysynth_db.rs"
required-features = ["native"]

# voice_collector: Stage D pipeline for public-domain SFZ catalog
# acquisition. Curates CC0 / CC-BY SFZ libraries via samples/manifest.json,
# fetches each `.sfz` text file via curl, audits licenses, and upserts
# rows into library.db with id prefix `sample:`. Native-only because it
# touches the same library_db and shells out to curl.
[[bin]]
name = "voice_collector"
path = "src/bin/voice_collector.rs"
required-features = ["native"]

# chord_pad binary: real-time chord-trigger surface for the STK guitar
# voice (and any other voices_live/* family). Dual input: PC keyboard
# (egui keystrokes → diatonic chord triggers) and USB MIDI (midir
# note_on/off → single-note voices). Built specifically because A/B
# listening in jukebox cannot replace hand-played feedback when
# auditioning a new physical-model guitar.
[[bin]]
name = "chord_pad"
path = "src/bin/chord_pad.rs"
required-features = ["native"]

# ksrepl: Steel (embedded Scheme) REPL — entry point for the Lisp
# scripting layer (issue #56 Phase 1). Phase 1 only hosts the bare
# Steel runtime so `(+ 1 2)` round-trips; Phase 2/3 will register
# keysynth Rust API as Steel callables for voice construction, chord
# progressions, and live edit. Native-only: depends on steel-core.
[[bin]]
name = "ksrepl"
path = "src/bin/ksrepl.rs"
required-features = ["native"]

# wav_audit: single-WAV numerical audit — peak/RMS/crest, silence
# intervals, RMS envelope, spectral envelope, dominant frequencies.
# Built so an AI agent without ambient audio modality can decide
# "is this render qualitatively wrong?" purely from numbers.
[[bin]]
name = "wav_audit"
path = "src/bin/wav_audit.rs"
required-features = ["native"]

# wav_diff: two-WAV numerical diff — cross-correlation peak+lag,
# multi-resolution STFT distance, spectral envelope ΔdB, peak/RMS
# deltas. Use to gate ship when something feels off vs last render.
[[bin]]
name = "wav_diff"
path = "src/bin/wav_diff.rs"
required-features = ["native"]

# gui_audit binary: pixel-level static audit of a GUI screenshot.
# Reads a PNG (winshot / desk_capture / printscreen output) and emits
# a JSON report — palette, WCAG contrast, edge density, column-peak
# alignment, margin balance, and rule-driven `blockers`. Pairs with
# the gui_vlm critique step (taste signal) and the cp-core CP probes
# (state correctness) to form a 3-axis ship gate. See
# ~/.agents/skills/gui-verify-pixel-vlm/SKILL.md for the workflow.
[[bin]]
name = "gui_audit"
path = "src/bin/gui_audit.rs"
required-features = ["native"]

# ksabtest: Stage F blind A/B harness — pick two voices, render the
# same MIDI through both, randomize slot assignment, let the listener
# pick which slot sounds more like a real piano, log every trial to
# `bench-out/ab_test.db`, show cumulative stats per voice pair.
# Independent egui binary so the existing jukebox stays focused on its
# multi-track mixer role. See `src/ab_test/mod.rs` for the data layer.
[[bin]]
name = "ksabtest"
path = "src/bin/ksabtest.rs"
required-features = ["native"]
