[package]
name = "cp-core"
version = "0.1.0"
edition = "2021"
description = "Vendor-neutral JSON-RPC 2.0 control-protocol substrate over TCP localhost. Self-sovereign — no third-party RPC SDKs."
publish = false

# Hard dependency budget: std + serde + serde_json. NO jsonrpsee, NO
# rmcp / mcp-*, NO tonic, NO async runtime. Multi-crate consumers share
# the same wire format and the same trust boundary; bringing in someone
# else's protocol stack would defeat the substrate philosophy.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
