[package]
name = "keysynth_voice_guitar_stk"
version = "0.1.0"
edition = "2021"
description = "voices_live plugin: Synthesis Toolkit (STK) Guitar/Twang port — second steel-string acoustic guitar voice (issue #52, A/B oracle for voices_live/guitar)."
publish = false

[package.metadata.keysynth-voice]
display_name = "Guitar (STK)"
category = "Guitar"
recommend = "Best"
description = "Stanford Synthesis Toolkit port, well-balanced output"
# Plucked-string voice: note-off has no physical analogue (the hammer
# is already off the string the moment it's plucked). The host MUST
# NOT call trigger_release(); the voice fades naturally via its loop
# filter and is retired when is_done() flips.
decay_model = "natural"

# Self-contained workspace root, same reasoning as the other
# `voices_live/<name>/` plugins: keysynth's top-level `[workspace]`
# excludes `voices_live` and everything under it, and an empty
# `[workspace]` here makes that explicit so the `target/cp-tests/`
# scratch-copy pattern used by `tests/cp_smoke.rs` keeps working.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
keysynth = { path = "../..", default-features = false }

[profile.dev]
opt-level = 1
debug = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = false
incremental = true
codegen-units = 16
