[package]
name = "keysynth_voice_piano"
version = "0.1.0"
edition = "2021"
description = "voices_live plugin: Engine::Piano (KS+modal hybrid + Stulov + Fletcher inharmonicity)."
publish = false

# Self-contained workspace root. Same reasoning as
# `voices_live/Cargo.toml`: keysynth's top-level `[workspace]` excludes
# voices_live and everything under it, so this crate already isn't a
# workspace member. Empty `[workspace]` makes that explicit and
# survives the `target/cp-tests/` scratch-copy pattern that
# `tests/cp_smoke.rs` uses.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Path-dep on the parent keysynth crate. `default-features = false`
# strips the `native` feature stack (midir / cpal / rfd / rodio /
# rustysynth / live_reload / cp-core / etc.) — the plugin only needs
# the DSP primitives in `keysynth::synth` and `keysynth::voices`,
# which are unconditional in lib.rs.
#
# Building this crate compiles a private copy of keysynth (and its
# unconditional deps cpal / eframe / egui) into the cdylib's target
# tree. First build is slow (~minute); subsequent reloads are
# incremental.
keysynth = { path = "../..", default-features = false }

[profile.dev]
opt-level = 1
debug = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = false
incremental = true
codegen-units = 16
