[package]
name = "keysynth_voice_piano_lite"
version = "0.1.0"
edition = "2021"
description = "voices_live plugin: Engine::PianoLite (3-string + 12-mode lite body)."
publish = false

[package.metadata.keysynth-voice]
display_name = "Piano Lite"
category = "Piano"
recommend = "Stable"
description = "fewer modes, lighter CPU"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
keysynth = { path = "../..", default-features = false }

[profile.dev]
opt-level = 1
debug = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = false
incremental = true
codegen-units = 16
